--- a/quotes/fence-adjust.html
+++ b/quotes/fence-adjust.html
@@ -32,15 +32,24 @@ border:2px solid #000;
 }
 .call-btn:hover{background:#333;}
 
+/* MAIN CONTENT LAYOUT */
+main{
+max-width:950px;
+margin:40px auto;
+padding:0 15px;
+font-family:Arial,sans-serif;
+line-height:1.6;
+color:#000;
+}
+
 /* CALCULATOR ENHANCED */
 .calc-box{
-max-width:950px;
-margin:30px auto;
 padding:25px;
 border:3px solid #000;
 border-radius:8px;
 background:#f4f4f4;
 box-shadow:0 4px 12px rgba(0,0,0,0.15);
+margin-bottom:30px;
 }
 .calc-box h2{
 font-size:1.8em;
@@ -104,6 +113,7 @@ font-weight:bold;
 </header>
 
 <main>
+
 <h1>Fence Installation Services – Askern DN6 & 6-mile radius</h1>
 
 <p>We install high-quality timber fences across Askern DN6 and surrounding areas within a 6-mile radius. Our typical fencing includes <strong>featheredge panels with concrete posts and optional gravel boards</strong>. Whether you need bespoke height panels, gates, or standard garden fences, our expert team delivers professional, long-lasting results.</p>
